# audio_to_text

./: README.md  pyproject.toml
src/: main.py  video_to_text.py
